# ml_api

./: compose.prod.yml  compose.yml  pyproject.toml
.github/workflows/: deploy.yaml
ML_API/: Dockerfile  Dockerfile.prod  pyproject.toml
ML_API/app/: main.py
ML_API/app/api/: ml.py
ML_API/app/core/: config.py
app/: main.py
app/api/: __init__.py  ml.py
proxy/: locations.conf
