[tool.poetry]
name = "ml-microservice"
version = "0.1.0"
description = ""
authors = ["LeikRad <48689668+LeikRad@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
vadersentiment = "^3.3.2"
transformers = "^4.40.2"
torch = "^2.3.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
